{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 17,
  "lineage": "435f9d87-ea30-9add-3509-744b7a4d8c69",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "zta-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fce381354cf79274",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-09af833f6f2d74568",
            "domain": "vpc",
            "id": "eipalloc-0fce381354cf79274",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-035a57d1d2f504595",
            "private_dns": "ip-10-0-1-50.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-18-142-29-78.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.142.29.78",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.zta-gw",
            "aws_network_interface.zta-web-server-nic",
            "aws_security_group.zta-allow-web-traffic",
            "aws_subnet.zta-subnet-1",
            "aws_vpc.zta-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "zta-Ubantu-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06c4be2792f419b7b",
            "arn": "arn:aws:ec2:ap-southeast-1:058264272086:instance/i-0f12321f667b99e22",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f12321f667b99e22",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "zeta-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-035a57d1d2f504595"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-035a57d1d2f504595",
            "private_dns": "ip-10-0-1-50.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_ip": "18.142.29.78",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b0a99e73760131da",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-014f197a4ea3ade98",
            "tags": {
              "Name": "ZTA Web Server"
            },
            "tags_all": {
              "Name": "ZTA Web Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0edd005210a4d3846"
            ]
          },
          "dependencies": [
            "aws_network_interface.zta-web-server-nic",
            "aws_security_group.zta-allow-web-traffic",
            "aws_subnet.zta-subnet-1",
            "aws_vpc.zta-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "zta-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058264272086:internet-gateway/igw-078938416d83d0122",
            "id": "igw-078938416d83d0122",
            "owner_id": "058264272086",
            "vpc_id": "vpc-01a411ebecd6ffc4d"
          },
          "dependencies": [
            "aws_vpc.zta-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "zta-web-server-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058264272086:network-interface/eni-035a57d1d2f504595",
            "id": "eni-035a57d1d2f504595",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:70:44:06:92:37",
            "owner_id": "058264272086",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0edd005210a4d3846"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-014f197a4ea3ade98"
          },
          "dependencies": [
            "aws_security_group.zta-allow-web-traffic",
            "aws_subnet.zta-subnet-1",
            "aws_vpc.zta-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "zta-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058264272086:route-table/rtb-06df4d3818c4e55b4",
            "id": "rtb-06df4d3818c4e55b4",
            "owner_id": "058264272086",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-078938416d83d0122",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-078938416d83d0122",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "zta-prod-route-table"
            },
            "tags_all": {
              "Name": "zta-prod-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a411ebecd6ffc4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.zta-gw",
            "aws_vpc.zta-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "zta-subnet-association-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c756dd26b4650b4c",
            "route_table_id": "rtb-06df4d3818c4e55b4",
            "subnet_id": "subnet-014f197a4ea3ade98"
          },
          "dependencies": [
            "aws_internet_gateway.zta-gw",
            "aws_route_table.zta-route-table",
            "aws_subnet.zta-subnet-1",
            "aws_vpc.zta-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "zta-subnet-association-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb5914706cb35912",
            "route_table_id": "rtb-06df4d3818c4e55b4",
            "subnet_id": "subnet-012a1fccfcdde36e6"
          },
          "dependencies": [
            "aws_internet_gateway.zta-gw",
            "aws_route_table.zta-route-table",
            "aws_subnet.zta-subnet-2",
            "aws_vpc.zta-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "zta-allow-web-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058264272086:security-group/sg-0edd005210a4d3846",
            "description": "Allow web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0edd005210a4d3846",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH traffic from all internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all http traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all https traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-web-traffic",
            "name_prefix": "",
            "owner_id": "058264272086",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls_from_web"
            },
            "tags_all": {
              "Name": "allow_tls_from_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a411ebecd6ffc4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.zta-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "zta-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058264272086:subnet/subnet-014f197a4ea3ade98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014f197a4ea3ade98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264272086",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zta-subnet-az-1a"
            },
            "tags_all": {
              "Name": "zta-subnet-az-1a"
            },
            "vpc_id": "vpc-01a411ebecd6ffc4d"
          },
          "dependencies": [
            "aws_vpc.zta-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "zta-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058264272086:subnet/subnet-012a1fccfcdde36e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012a1fccfcdde36e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264272086",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zta-subnet-az-1b"
            },
            "tags_all": {
              "Name": "zta-subnet-az-1b"
            },
            "vpc_id": "vpc-01a411ebecd6ffc4d"
          },
          "dependencies": [
            "aws_vpc.zta-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "zta-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:058264272086:vpc/vpc-01a411ebecd6ffc4d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02b379b15e806a4e1",
            "default_route_table_id": "rtb-0f80682882a24c2e7",
            "default_security_group_id": "sg-0701f51cb49589a4e",
            "dhcp_options_id": "dopt-0724e52d26a217c0e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01a411ebecd6ffc4d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f80682882a24c2e7",
            "owner_id": "058264272086"
          }
        }
      ]
    }
  ]
}